# byte-size-rust

./: .gitignore  README.md
day1_ownership_borrowing/: Cargo.toml  day1.md
day1_ownership_borrowing/src/: main.rs
day2_traits_and_modular_design/: Cargo.toml  day2.md
day2_traits_and_modular_design/src/: main.rs  traits.rs
day2_traits_and_modular_design/src/info/: cpu.rs  hostname.rs  mod.rs  os.rs  rust.rs
day3_error_handling_and_async/: Cargo.toml  day3.md
day3_error_handling_and_async/src/: config.rs  error.rs  main.rs  proxy.rs
day4_chat_with_grpc/: Cargo.toml  Makefile  build.rs  day4.md
day4_chat_with_grpc/proto/: chat.proto
day4_chat_with_grpc/src/: client.rs  main.rs  server.rs
