[package]
name = "day4_chat_with_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream= "0.1.15"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"